# gemma_earth

./: .env.pro  .env.smoke  .env.standard  .gitignore  CITATION.cff  README.md  main.py  pyproject.toml  results.json  sample_prompt.txt
scripts/: create-disk.sh  create-vm.sh  mount-disk.sh  one_example_eval.py  resize-disk.sh  save_dataset_example.py  serve_fastapi.py  serve_ui.py
serve-vllm/: classify_image.py  run_prod.sh
src/gemma_earth/: __init__.py  config.py  dataset.py  hf_export.py  trainer.py  utils.py
src/gemma_earth/trainers/: __init__.py  base.py  huggingface_checkpoint_trainer.py  tunix_checkpoint_trainer.py
